fix layout bugs

--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -7,7 +7,8 @@
   text-transform: capitalize;
   transition: background-color 250ms ease;
   display: flex;
-  align-items: end;
+  align-items: center;
+  justify-content: center;
   gap: 0.5rem;
   width: fit-content;
 }
