--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -19,32 +19,6 @@
   background-position: 50% 50%;
 }
 
-.searchForm {
-  display: flex;
-  height: 48px;
-  margin-bottom: 0px;
-  padding-right: 18px;
-  padding-left: 24px;
-  border: 0px none transparent;
-  border-radius: 25.6px;
-  background-color: #fff;
-  margin-bottom: 10px;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.searchForm input {
-  display: block;
-  width: 100%;
-  height: 38px;
-  padding: 8px 12px;
-  font-size: 14px;
-  line-height: 1.42857143;
-  color: #333333;
-  border: 0;
-  outline: 0;
-}
-
 .grid {
   margin-top: 128px;
   display: grid;
@@ -138,5 +112,8 @@
     gap: 1rem;
     grid-template-columns: 1fr 1fr;
     margin-top: 44px;
+  }
+  .featured button {
+    width: 100%;
   }
 }
